UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Phoenix_BidLineItemExtn__c.object
<CustomObject>
    <fields>
        <fullName>Opening_Order_CVS__c</fullName>
        <label>Opening Order for CVS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opening_Order_Net_Sales_for_CVS__c</fullName>
        <label>Opening Order Net Sales for CVS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opening_Order_TPT_Perc_for_CVS__c</fullName>
        <label>Opening Order TPT % for CVS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opening_Order_TPT_for_CVS__c</fullName>
        <label>Opening Order TPT $ for CVS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_3MonAnnualMajorSellingUnits__c</fullName>
        <label>Phoenix 3MonAnnualMajorSellingUnits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Actual12MonCardinalSelUnits__c</fullName>
        <label>Phoenix Actual12MonCardinalSelUnits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Actual12MonMajorSelUnit__c</fullName>
        <label>Phoenix Actual12MonMajorSelUnit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Actual12MonTotalSaleUnits__c</fullName>
        <label>Phoenix Actual12MonTotalSaleUnits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_ApprovedCVSDirSellingUnits__c</fullName>
        <label>Phoenix ApprovedCVSDirSellingUnits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_ApprovedCVSIndirSellingUnits__c</fullName>
        <label>Phoenix ApprovedCVSIndirSellingUnits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_ApprovedCardinalSellingUnits__c</fullName>
        <label>Phoenix ApprovedCardinalSellingUnits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_ApprovedMajorSellingUnits__c</fullName>
        <label>Phoenix ApprovedMajorSellingUnits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Id__c</fullName>
        <formula>Phoenix_Bid_Line_Item__r.Phoenix_Bid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bid Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Line_Item__c</fullName>
        <label>Bid Line Item</label>
        <referenceTo>Phoenix_Bid_Line_Item__c</referenceTo>
        <relationshipName>BidLineItemsExtn</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phoenix_CVS_Brand_WAC_Perc__c</fullName>
        <label>CVS Brand WAC Perc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_CVS_Cash_Terms__c</fullName>
        <label>Phoenix CVS Cash Terms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_CVS_Direct_TPT_Per__c</fullName>
        <label>Phoenix CVS Direct TPT Per</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_CVS_Direct_TPT__c</fullName>
        <label>Phoenix CVS Direct TPT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_CVS_Fees__c</fullName>
        <label>Phoenix CVS Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_CVS_Indirect_TPT_Per__c</fullName>
        <label>Phoenix CVS Indirect TPT Per</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_CVS_Indirect_TPT__c</fullName>
        <label>Phoenix CVS Indirect TPT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_CVS_Total_Net_Sales__c</fullName>
        <label>Phoenix CVS Total Net Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_CVS_Total_TPT_Per__c</fullName>
        <label>Phoenix CVS Total TPT Per</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_CVS_Total_TPT__c</fullName>
        <label>Phoenix CVS Total TPT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_CardinalAdditionalRebate__c</fullName>
        <label>Cardinal Additional Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cardinal_Cash_Terms__c</fullName>
        <label>Phoenix Cardinal Cash Terms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cardinal_REMS_Fee__c</fullName>
        <label>Phoenix Cardinal REMS Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cardinal_Rebates__c</fullName>
        <label>Phoenix Cardinal Rebates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cardinal_TPT_Per__c</fullName>
        <label>Phoenix Cardinal TPT Per</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cardinal_TPT_Per_perUnit__c</fullName>
        <label>Phoenix Cardinal TPT Per perUnit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cardinal_TPT__c</fullName>
        <label>Phoenix Cardinal TPT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cardinal_TPT_perUnit__c</fullName>
        <label>Phoenix Cardinal TPT perUnit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Major_Acquisition_Costs__c</fullName>
        <label>Phoenix Current Major Acquisition Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Major_Contract_Price__c</fullName>
        <label>Phoenix Current Major Contract Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Supplier_Major__c</fullName>
        <label>Phoenix Current Supplier Major</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Internal_Major_Dead_Net__c</fullName>
        <label>Phoenix Internal Major Dead Net</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Major_Additional_Rebate__c</fullName>
        <label>Phoenix Major Additional Rebate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Major_Brand_WAC_Per__c</fullName>
        <label>Major Brand WAC Per</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Major_Cash_Terms__c</fullName>
        <label>Phoenix Major Cash Terms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Major_Net_Sales__c</fullName>
        <label>Phoenix  Major Net Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Major_REMS_Fee__c</fullName>
        <label>Phoenix Major REMS Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Major_Rebate_per__c</fullName>
        <label>Phoenix Major Rebate per</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Major_Rebates__c</fullName>
        <label>Phoenix Major Rebates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Major_TPT_Per__c</fullName>
        <label>Phoenix  Major TPT Per</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Major_TPT_Per_perUnit__c</fullName>
        <label>Phoenix  Major TPT Per perUnit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Major_TPT__c</fullName>
        <label>Phoenix Major TPT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Major_TPT_perUnit__c</fullName>
        <label>Phoenix Major TPT perUnit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_NLC_Fees__c</fullName>
        <label>Phoenix NLC Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Opening_Order_Major_Net_sales__c</fullName>
        <label>Phoenix_Opening_Order_Major_Net_sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Opening_Order_Major_TPT_Per__c</fullName>
        <label>Phoenix_Opening_Order_Major_TPT_Per</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Opening_Order_Major_TPT__c</fullName>
        <label>Phoenix_Opening_Order_Major_TPT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Opening_Order_Major__c</fullName>
        <label>Phoenix_Opening_Order_Major</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_OverrideMajorUnits__c</fullName>
        <label>Phoenix OverrideMajorUnits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Preferred_Cardinal_Rebate_per__c</fullName>
        <label>Phoenix Preferred Cardinal Rebate per</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_PropMarktCvsCardinalAcquisitCost__c</fullName>
        <label>Phoenix PropMarktCvsCardinalAcquisitCost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_CVS_DirSellingUnits__c</fullName>
        <label>Phoenix Proposed CVS DirSellingUnits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_CVS_IndirSellingUnits__c</fullName>
        <label>Phoenix Proposed CVS IndirSellingUnits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Cardinal_Position__c</fullName>
        <label>Phoenix Proposed Cardinal Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Cardinal_Sales_Price__c</fullName>
        <label>Phoenix Proposed Cardinal Sales Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Cardinal_Units__c</fullName>
        <label>Phoenix Proposed Cardinal Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_CvsDirectContractPrice__c</fullName>
        <label>Phoenix Proposed CvsDirectContractPrice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Major_Contract_Price__c</fullName>
        <label>Phoenix Proposed Major Contract Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Major_Position__c</fullName>
        <label>Phoenix Proposed Major Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Major_Sales_Price__c</fullName>
        <label>Phoenix Proposed Major Sales Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Major_Units__c</fullName>
        <label>Phoenix Proposed Major Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_RDC_Fee__c</fullName>
        <label>Phoenix RDC Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Service_Fee__c</fullName>
        <label>Phoenix Service Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Total3MonAnnualSellingUnits__c</fullName>
        <label>Phoenix Total3MonAnnualSellingUnits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Total_RedOak_TPT_Per__c</fullName>
        <label>Phoenix Total RedOak TPT Per</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Total_RedOak_TPT__c</fullName>
        <label>Phoenix Total RedOak TPT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_ZITD__c</fullName>
        <label>Phoenix ZITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Category__c</fullName>
        <description>This field is used for Business Analysis</description>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Effective_Date_of_Removal__c</fullName>
        <label>Effective Date of Removal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bid Line Item Extn</label>
    <nameField>
        <displayFormat>BidLineItemExtn-{0000000}</displayFormat>
        <label>BidLineItemExtn Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bid Line Item Extn</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>